--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,28 @@
 ---
-layout: archive
+layout: single
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+<h2>Communicative Sciences and Disorders (master’s program)</h2>
+<ul>
+  <li>Dysphagia in Children and Adults (3 credits)</li>
+  <li>Practicum 1: Pre-Clinic (2 credits)</li>
+  <li>Principles of Intervention (2 credits)</li>
+  <li>Motor Speech Disorders (3 credits)</li>
+</ul>
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<h2>Communicative Sciences and Disorders (undergraduate program)</h2>
+<p><em>Teaching Assistant</em></p>
+<ul>
+  <li>Talking Brain (3 credits)</li>
+  <li>Neuroanatomy and Physiology of Communication (3 credits)</li>
+</ul>
+
+<h2>Speech@NYU (online master’s program)</h2>
+<ul>
+  <li>Anatomy and Physiology of the Speech and Swallowing Mechanism (2 credits)</li>
+  <li>Voice Disorders (3 credits)</li>
+  <li>Practicum 1: Pre-Clinic (2 credits)</li>
+</ul>
