Add hunter to teaching page

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,7 +5,9 @@ permalink: /teaching/
 author_profile: true
 ---
 
+<h2>New York University</h2>
 <h2>Communicative Sciences and Disorders (master’s program)</h2>
+<p><em>Adjunct Instructor</em></p>
 <ul>
   <li>Dysphagia in Children and Adults (3 credits)</li>
   <li>Practicum 1: Pre-Clinic (2 credits)</li>
@@ -21,8 +23,16 @@ author_profile: true
 </ul>
 
 <h2>Speech@NYU (online master’s program)</h2>
+<p><em>Adjunct Instructor</em></p>
 <ul>
   <li>Anatomy and Physiology of the Speech and Swallowing Mechanism (2 credits)</li>
   <li>Voice Disorders (3 credits)</li>
   <li>Practicum 1: Pre-Clinic (2 credits)</li>
+</ul>
+
+<h2>Hunter College</h2>
+<h2>Department of Speech-Language Pathology & Audiology (master’s program)</h2>
+<p><em>Adjunct Lecturer</em></p>
+<ul>
+    <li>Assessment and Management of Dysphagia Across the Lifespan (4 credits)</li>
 </ul>
